# kawa_ecs

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md  entity_info.cpp  entity_info.h  examples.cpp  kawa_ecs v0.0.2.sln  kawa_ecs v0.0.2.vcxproj  kawa_ecs v0.0.2.vcxproj.filters  main.cpp  registry.h  stress_test.cpp
examples/: CMakeLists.txt  ecs.cpp  examples.cpp  stress_test.cpp
include/: registry.h
include/internal/: meta.h  meta_ecs_ext.h  poly_storage.h  query_par_engine.h
kawa/core/: any.h  core.h  core_types.h  ecs.h  fast_map.h  flag_set.h  indirect_array.h  macros.h  meta.h  platform_detect.h  profile.h  ring_buffer.h  rng.h  stable_tuple.h  task_manager.h  testing.h  utils.h  uuid.h
kawa/ecs/: kwecs.h  registry.h
kawa/ecs/internal/: core.h  meta.h  meta_ecs_ext.h  poly_storage.h
kawa/ecs/src/: registry.h
kawa/ecs/src/internal/: core.h  ecs_base.h  ecs_types.h  entity_manager.h  meta.h  meta_ecs_ext.h  par_task_engine.h  poly_storage.h  query_par_engine.h  storage_manager.h  thread_pool.h
single_header/: kwecs.h  registry.h
src/: CMakeLists.txt  registry.cppm
